--- a/report/body/design.tex
+++ b/report/body/design.tex
@@ -8,9 +8,9 @@ The agents used to solve this task will be deep neural networks. These will be b
 
 \paragraph{}
 
-The selection, crossover and mutation processes will also have to be designed. For selection, tournament selection will be use, as well as elitism. Tournament selection is when a sample of the entire population is chosen to perform a tournament, i.e the fitness of the individual, and the best individual is returned. Half the population will be sampled and tournament selection performed on the sample in order to generate the parents for crossover. Elitism is where the top N individuals in terms of fitness will be automatically passed to the next generation. Different values of N will be experimented with to determine the most optimal value. For crossover, uniform crossover will be used. This can be performed in two ways, show in Table \ref{tab:cr-operations}:
+The selection, crossover and mutation processes will also have to be designed. For selection, tournament selection will be use, as well as elitism. Tournament selection is when a sample of the entire population is chosen to perform a tournament, i.e the fitness of the individual, and the best individual is returned. Half the population will be sampled and tournament selection performed on the sample in order to generate the parents for crossover. Elitism is where the top N individuals in terms of fitness will be automatically passed to the next generation. Different values of N will be experimented with to determine the most optimal value. For crossover, uniform crossover will be used. This can be performed in two ways, shown in Table \ref{tab:cr}.
 
-\begin{table}
+\begin{table}[ht]
   \centering
   \begin{tabular}{| m{8cm} | m{8cm}|}
     \hline
@@ -21,27 +21,32 @@ The selection, crossover and mutation processes will also have to be designed. F
     Option 2 & For each entire layer, check if crossover should occur (chance $<$ crossover\_rate) and crossover \\
     \hline
   \end{tabular}
-  \label{tab:cr-operations}
-  \caption{Possible Crossover Operators}
+  \caption{Possible CR Operators}
+  \label{tab:cr}
+
 \end{table}
 
 
-Problems could arise could arise by choosing option 2. This is because by swapping an entire layer, too much change has occurred and the model is likely to not perform well. Therefore, option 1 will be used as the crossover operator in this project, The crossover will be experimented with, however the range of experimentation will be [0.1,0.4]. Mutation is used to maintain and introduce diversity into the population. The mutation rate should be initially large, to increase the exploration across the search space before gradually decrease in order to maximise the exploitation on the found local minima. This local minima should hopefully be the global minima as the exploration rate was high at the start of the GA. To implement this, the mutation rate will follow this proportionality: $ mr \propto \frac{1}{\sqrt{g}}$, where g is the current generation number. The possible set of mutation operators to be experimented with can be seen in Table \ref{tab:mr-operations}. The mutation operator would be for each weight if the chance to mutate the weight is less than the mutation rate, then perform mutation.
+Problems could arise could arise by choosing option 2. This is because by swapping an entire layer, too much change has occurred and the model is likely to not perform well. Therefore, option 1 will be used as the crossover operator in this project, The crossover will be experimented with, however the range of experimentation will be [0.1,0.4]. Mutation is used to maintain and introduce diversity into the population. The mutation rate should be initially large, to increase the exploration across the search space before gradually decrease in order to maximise the exploitation on the found local minima. This local minima should hopefully be the global minima as the exploration rate was high at the start of the GA. To implement this, the mutation rate will follow this proportionality: $ mr \propto \frac{1}{\sqrt{g}}$, where g is the current generation number. The possible set of mutation operators to be experimented with can be seen in Table \ref{tab:mr}. The mutation operator would be for each weight if the chance to mutate the weight is less than the mutation rate, then perform mutation.
 
-%\begin{table}
-  %\begin{tabular}{| m{8cm} | m{8cm} |}
-    %\hfill
-    %\rowcolor{black!30} \Centering \textbf{Option} & \Centering \textbf{Algorithm} \\
-    %\hfill
-    %Option 1 & Each weight is replaced with a random value (within certain constraints) \\
-    %\hfill
-    %Option 2 & Each weight is changed by a random percentage (performed by multiplying each weight by a random value between 0.5 and 1.5) \\
-    %\hfill
-    %Option 3 & Each weight has its sign flipped. \\
-  %\end{tabular}
-  %\caption{Possible Mutation Operators}
-  %\label{tab:mr-operations}
-%\end{table}
+\begin{table}[ht]
+  \centering
+  \begin{tabular}{| m{8cm} | m{8cm} |}
+    \hline
+    \rowcolor{black!30} \Centering \textbf{Option} & \Centering \textbf{Algorithm} \\
+    \hline
+    Option 1 & Each weight is replaced with a random value (within certain constraints) \\
+    \hline
+    Option 2 & Each weight is changed by a random percentage (performed by multiplying each weight by a random value between 0.5 and 1.5) \\
+    \hline
+    Option 3 & Each weight has its sign flipped. \\
+    \hline
+  \end{tabular}
+  \caption{Possible Mutation Operators}
+  \label{tab:mr}
+
+\end{table}
+
 
 \paragraph{}
 
