report updates - option 2 mr

--- a/report/body/implementation.tex
+++ b/report/body/implementation.tex
@@ -65,7 +65,7 @@ Using these determined rates both the mutation and crossover operators were test
   \subfloat[Option 3]{
    \begin{minipage}[c]{0.3\textwidth}
      \centering
-     %\includegraphics[scale=0.3]{}
+     \includegraphics[scale=0.3]{images/mr-option3.png}
    \end{minipage}}
   \hfill
   \caption{Best Mutation Operator Testing - (x-axis - Current Generation, y-axis - Score)}
