--- a/report/body/design.tex
+++ b/report/body/design.tex
@@ -8,7 +8,7 @@ The agents used to solve this task will be deep neural networks. These will be b
 
 \paragraph{}
 
-The selection, crossover and mutation processes will also have to be designed. For selection, tournament selection will be use, as well as elitism. Tournament selection is when a sample of the entire population is chosen to perform a tournament, i.e the fitness of the individual, and the best individual is returned. Half the population will be sampled and tournament selection performed on the sample in order to generate the parents for crossover. Elitism is where the top N individuals in terms of fitness will be automatically passed to the next generation. Different values of N will be experimented with to determine the most optimal value. For crossover, uniform crossover will be used. This can be performed in two ways, shown in Table \ref{tab:cr}.
+The selection, crossover and mutation processes will also have to be designed. For selection, tournament selection will be use, as well as elitism. Tournament selection is when a sample of the entire population is chosen to perform a tournament, i.e the fitness of the individual, and the best individual is returned. Half the population will be sampled and tournament selection performed on the sample in order to generate the parents for crossover. Elitism is where the top N individuals in terms of fitness will be automatically passed to the next generation. Different values of N will be experimented with to determine the most optimal value, however it will likely be between 2 and 4. For crossover, uniform crossover will be used. This can be performed in two ways, shown in Table \ref{tab:cr}.
 
 \begin{table}[ht]
   \centering
@@ -27,7 +27,7 @@ The selection, crossover and mutation processes will also have to be designed. F
 \end{table}
 
 
-Problems could arise could arise by choosing option 2. This is because by swapping an entire layer, too much change has occurred and the model is likely to not perform well. Therefore, option 1 will be used as the crossover operator in this project, The crossover will be experimented with, however the range of experimentation will be [0.1,0.4]. Mutation is used to maintain and introduce diversity into the population. The mutation rate should be initially large, to increase the exploration across the search space before gradually decrease in order to maximise the exploitation on the found local minima. This local minima should hopefully be the global minima as the exploration rate was high at the start of the GA. To implement this, the mutation rate will follow this proportionality: $ mr \propto \frac{1}{\sqrt{g}}$, where g is the current generation number. The possible set of mutation operators to be experimented with can be seen in Table \ref{tab:mr}. The mutation operator would be for each weight if the chance to mutate the weight is less than the mutation rate, then perform mutation.
+Problems could arise could arise by choosing option 2. This is because by swapping an entire layer, too much change has occurred and the model is likely to not perform well. Therefore, option 1 will be used as the crossover operator in this project, The crossover rate will be experimented with, however the range of experimentation will be [0.1,0.4]. Mutation is used to maintain and introduce diversity into the population. The mutation rate should be initially large, to increase the exploration across the search space before gradually decreasing in order to maximise the exploitation on the found local minima. This local minima should hopefully be the global minima as the exploration rate was high at the start of the GA. To implement this, the mutation rate will follow this proportionality: $ mr \propto \frac{1}{\sqrt{g}}$, where g is the current generation number. The possible set of mutation operators to be experimented with can be seen in Table \ref{tab:mr}. The operation would be, for each weight if the a randomly generated number between 0 and 1, is less than the mutation rate, then perform the mutation operator on the weight.
 
 \begin{table}[ht]
   \centering
@@ -50,4 +50,4 @@ Problems could arise could arise by choosing option 2. This is because by swappi
 
 \paragraph{}
 
-The population should converge on weights that consistently score high scores in Space Invaders. Then, these networks can be taken and tested on the other two environments. In order to test the transfer learning, the resulting score from running the model on the new environment could be used. This score can be compared against just taking steps at random in the environment and hopefully model will score significantly higher. The time constraints on this project might result in a smaller improvement than expected, due to the time it takes to train a RL DNN model, but if positive results can be produced in a small time-frame then even better results could be produced with more time
+The population should converge on weights that consistently score high scores in Space Invaders. Then, these networks can be taken and tested on the other two environments. In order to test the transfer learning, the resulting score from running the model on the new environment could be used. This score can be compared against taking steps at random in the environment until termination. The time constraints on this project might result in a smaller improvement than expected, due to the time it takes to train a RL DNN model, but if positive results can be produced in a small time-frame then even better results could be produced with more time
