--- a/report/summary/summary.tex
+++ b/report/summary/summary.tex
@@ -4,17 +4,9 @@
 
 \section{Summary of Work}
 
-Successes - review evaluation basically, produced a positive outcome in a limited time frame. work is well thought out etc...
-
-
-In order to utilise transfer learning for a deep neural network, the new input shape must be the same as the input shape used to train the DNN. This means we cannot utilise this project for many other types of games not on the Atari console. Furthermore, deep neural network like the one utilised in this project can only produce outputs that correspond to discrete actions. This means any environment with a continuous action space will not work with this type of neuro-evolution. However, we can use other frameworks for this, such as DDPG or TD3 and test their transfer learning capabilities for continous action spaces.
+The project successfully tested both the outcome of using neuro-evolution on Space Invaders and the transfer of that learning into other similar Atari game environments. Whilst the project did not produce the results I had hoped for, the confirmation that RL algorithms can in fact transfer their learning, I still produced a detailed and well thought out project. The main restriction for this project was the time-constrains, which proved difficult to stick to especially given the time it takes to train the agents via neuro-evolution. Furthermore, agents trained in this way can only produce outputs that correspond to discrete actions. Many RL tasks nowadays use a continuous action space, such as the ShadowHand environments from OpenAI. These are robotics hands that can perform simple tasks, which could in theory be trained using neuroevolution, but their action space is continuous. Apart from these two limitations, the project was successful, I learnt a lot more about the frameworks for RL tasks and gained more experience in Tensorflow, which I enjoyed.
 
 \section{Future Work}
 
-**POSTIVE**
 
-The project showed evidence that transfer learning is viable in reinforcement learning. This is positive for other RL tasks, such as the OpenAI ShadowHands environment. This is a robotics environment with a robot hand. There are multiple RL tasks for this such as manipulating a block into the correct position or moving the fingers of the hand into the correct position. These environments would be perfect for transfer learning, and at least reducing the training time for certain tasks for the hand would be very useful for real-world robotics problems. Neuroevolution whilst powerful does require a lot of compute power to train the models to convergence on even simpler tasks like an Atari game, so in order to train the models to produce consistent results on a RL task such as controlling a robots movement would require a longer training time and more GPUs to spread the workload over, something which with access to, would be interesting to experiment with.
-
-**NEGATIVE**
-
-This project did not show evidence of that transfer learning is significantly viable in RL tasks. This could be due to using neuroevolution specifically, and therefore further work would be testing this process again but using different algorithms such as DDPG or TD3 to train the initial model before testing the transfer learning capabilities.
+This project did not show evidence of transfer learning being significantly viable in RL tasks, when neuro-evolution is used. However, when transfer learning is utilised in computer vision tasks, it is often a base understanding of the image that is transferred, and the rest of the layers are then retrained to fit the new problem. This could be viable in RL tasks too. If I had more time, I would like to compare using neuro-evolution on a environment with two initial generations, the first one is a random set of models, and the second is the final generation from neuro-evolution on a second similar environment. We could then see if the two generations converge to an optima at different rates, perhaps the one with the previously learnt knowledge converging faster due to its previous knowledge of how to move about the environment. I would also like to test the transfer learning capabilities of different types of algorithms, such as DDPG or TD3 to compare with neuro-evolution.
